--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,4 +67,5 @@ workflows:
       - say-hello
       - print-hello
       - print-world
-          requires: [print-hello]
+          requires:
+            - print-hello
