--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,6 +66,6 @@ workflows:
     jobs:
       - say-hello
       - print-hello
-      - print-world
+      - print-world:
           requires:
             - print-hello
