--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,8 +18,6 @@ jobs:
       - run:
           name: "save txt file"
           command: |
-                mkdir ./txt
-                cd txt
                 echo "text to output here" > output.txt
 
       - persist_to_workspace:
@@ -37,7 +35,7 @@ jobs:
           at: ./txt
       - run:
           name: "print txt content"
-          command: mkdir txt & cd txt & cat output.txt
+          command: cat output.txt
 
 
 workflows:
