--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,9 +6,9 @@ commands:
     parameters:
       name:
         type: string
-        default: "ci pipeline id"
+        default: $CIRCLE_WORKFLOW_ID
     steps:
-      - run: echo $CIRCLE_WORKFLOW_ID
+      - run: echo << parameters.name >>
 
 
 jobs:
